IOS-739 Remove FXBlur + CWPopup dependency

--- a/src/iOS_Lang/ar.lproj/Localizable.strings
+++ b/src/iOS_Lang/ar.lproj/Localizable.strings
@@ -422,7 +422,7 @@
 "Download" = "تحميل";
 
 /* No comment provided by engineer. */
-"Download sucessful" = "تم التنزيل بنجاح";
+"Download successful" = "تم التنزيل بنجاح";
 
 /* No comment provided by engineer. */
 "Downloads" = "التنزيلات";
