--- a/src/iOS_Lang/cs.lproj/Localizable.strings
+++ b/src/iOS_Lang/cs.lproj/Localizable.strings
@@ -422,7 +422,7 @@
 "Download" = "Stáhnout";
 
 /* No comment provided by engineer. */
-"Download sucessful" = "Stahování ůspěšně dokončeno";
+"Download successful" = "Stahování ůspěšně dokončeno";
 
 /* No comment provided by engineer. */
 "Downloads" = "Stahování";
