--- a/src/iOS_Lang/de.lproj/Localizable.strings
+++ b/src/iOS_Lang/de.lproj/Localizable.strings
@@ -422,7 +422,7 @@
 "Download" = "Download";
 
 /* No comment provided by engineer. */
-"Download sucessful" = "Download erfolgreich";
+"Download successful" = "Download erfolgreich";
 
 /* No comment provided by engineer. */
 "Downloads" = "Downloads";
