--- a/src/iOS_Lang/fa.lproj/Localizable.strings
+++ b/src/iOS_Lang/fa.lproj/Localizable.strings
@@ -422,7 +422,7 @@
 "Download" = "دانلود";
 
 /* No comment provided by engineer. */
-"Download sucessful" = "دانلود موفقیت آمیز";
+"Download successful" = "دانلود موفقیت آمیز";
 
 /* No comment provided by engineer. */
 "Downloads" = "دانلود ها";
