--- a/src/iOS_Lang/hi.lproj/Localizable.strings
+++ b/src/iOS_Lang/hi.lproj/Localizable.strings
@@ -422,7 +422,7 @@
 "Download" = "डाउन्लोड";
 
 /* No comment provided by engineer. */
-"Download sucessful" = "डाउनलोड सफल";
+"Download successful" = "डाउनलोड सफल";
 
 /* No comment provided by engineer. */
 "Downloads" = "डाउनलोड";
