--- a/src/iOS_Lang/hu.lproj/Localizable.strings
+++ b/src/iOS_Lang/hu.lproj/Localizable.strings
@@ -422,7 +422,7 @@
 "Download" = "Letöltés";
 
 /* No comment provided by engineer. */
-"Download sucessful" = "Letöltés sikeres";
+"Download successful" = "Letöltés sikeres";
 
 /* No comment provided by engineer. */
 "Downloads" = "Letöltések";
