--- a/src/iOS_Lang/it.lproj/Localizable.strings
+++ b/src/iOS_Lang/it.lproj/Localizable.strings
@@ -422,7 +422,7 @@
 "Download" = "Scarica";
 
 /* No comment provided by engineer. */
-"Download sucessful" = "Download completato";
+"Download successful" = "Download completato";
 
 /* No comment provided by engineer. */
 "Downloads" = "Download";
