--- a/src/iOS_Lang/ko.lproj/Localizable.strings
+++ b/src/iOS_Lang/ko.lproj/Localizable.strings
@@ -422,7 +422,7 @@
 "Download" = "다운로드";
 
 /* No comment provided by engineer. */
-"Download sucessful" = "다운로드 성공";
+"Download successful" = "다운로드 성공";
 
 /* No comment provided by engineer. */
 "Downloads" = "다운로드";
