--- a/src/iOS_Lang/pl.lproj/Localizable.strings
+++ b/src/iOS_Lang/pl.lproj/Localizable.strings
@@ -422,7 +422,7 @@
 "Download" = "Pobieranie";
 
 /* No comment provided by engineer. */
-"Download sucessful" = "Pobieranie zakończone powodzeniem";
+"Download successful" = "Pobieranie zakończone powodzeniem";
 
 /* No comment provided by engineer. */
 "Downloads" = "Pobrane";
