--- a/src/iOS_Lang/pt.lproj/Localizable.strings
+++ b/src/iOS_Lang/pt.lproj/Localizable.strings
@@ -422,7 +422,7 @@
 "Download" = "Descarregar";
 
 /* No comment provided by engineer. */
-"Download sucessful" = "Descarga concluída com sucesso";
+"Download successful" = "Descarga concluída com sucesso";
 
 /* No comment provided by engineer. */
 "Downloads" = "Descargas";
