--- a/src/iOS_Lang/sl.lproj/Localizable.strings
+++ b/src/iOS_Lang/sl.lproj/Localizable.strings
@@ -422,7 +422,7 @@
 "Download" = "Prenesi";
 
 /* No comment provided by engineer. */
-"Download sucessful" = "Prenos je uspel";
+"Download successful" = "Prenos je uspel";
 
 /* No comment provided by engineer. */
 "Downloads" = "Prenosi";
