--- a/src/iOS_Lang/sv.lproj/Localizable.strings
+++ b/src/iOS_Lang/sv.lproj/Localizable.strings
@@ -422,7 +422,7 @@
 "Download" = "Ladda ner";
 
 /* No comment provided by engineer. */
-"Download sucessful" = "Nedladdning slutförd";
+"Download successful" = "Nedladdning slutförd";
 
 /* No comment provided by engineer. */
 "Downloads" = "Nerladdningar";
