--- a/src/iOS_Lang/tr.lproj/Localizable.strings
+++ b/src/iOS_Lang/tr.lproj/Localizable.strings
@@ -422,7 +422,7 @@
 "Download" = "indir";
 
 /* No comment provided by engineer. */
-"Download sucessful" = "Başarılı indirin";
+"Download successful" = "Başarılı indirin";
 
 /* No comment provided by engineer. */
 "Downloads" = "İndirilenler";
