--- a/src/iOS_Lang/vi.lproj/Localizable.strings
+++ b/src/iOS_Lang/vi.lproj/Localizable.strings
@@ -422,7 +422,7 @@
 "Download" = "Tải về";
 
 /* No comment provided by engineer. */
-"Download sucessful" = "Tải về thành công";
+"Download successful" = "Tải về thành công";
 
 /* No comment provided by engineer. */
 "Downloads" = "Tải về";
