--- a/src/iOS_Lang/fr.lproj/Localizable.strings
+++ b/src/iOS_Lang/fr.lproj/Localizable.strings
@@ -422,7 +422,7 @@
 "Download" = "Télécharger";
 
 /* No comment provided by engineer. */
-"Download sucessful" = "Download sucessful";
+"Download successful" = "Download successful";
 
 /* No comment provided by engineer. */
 "Downloads" = "Téléchargements";
