--- a/src/Catty/Resources/Localization/hi.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/hi.lproj/Localizable.strings
@@ -422,7 +422,7 @@
 "Download" = "डाउन्लोड";
 
 /* No comment provided by engineer. */
-"Download sucessful" = "डाउनलोड सफल";
+"Download successful" = "Download successful";
 
 /* No comment provided by engineer. */
 "Downloads" = "डाउनलोड";
@@ -1001,9 +1001,6 @@
 "not available. Continue anyway?" = "not available. Continue anyway?";
 
 /* No comment provided by engineer. */
-"Not Connected to a WiFi network, please connect to one or change the settings to download also with mobile data." = "वाईफाई नेटवर्क से कनेक्ट नहीं है, कृपया एक से कनेक्ट करें या मोबाइल डेटा के साथ भी डाउनलोड करने के लिए सेटिंग्स को बदलें।";
-
-/* No comment provided by engineer. */
 "Not enough free memory to download this project. Please delete some of your projects" = "Not enough free memory to download this project. Please delete some of your projects";
 
 /* No comment provided by engineer. */
@@ -1067,7 +1064,7 @@
 "Only special characters are not allowed. Please enter at least %lu other character(s)." = "Only special characters are not allowed. Please enter at least %lu other character(s).";
 
 /* No comment provided by engineer. */
-"Open" = "खोलें";
+"Open" = "Open";
 
 /* No comment provided by engineer. */
 "or" = "या";
