CATTY-36 Add RestBrick

--- a/src/iOS_Lang/en.lproj/Localizable.strings
+++ b/src/iOS_Lang/en.lproj/Localizable.strings
@@ -1391,6 +1391,9 @@
 "Resize" = "Resize";
 
 /* No comment provided by engineer. */
+"Rest for" = "Rest for";
+
+/* No comment provided by engineer. */
 "Restart" = "Restart";
 
 /* No comment provided by engineer. */
